<resources>
    <string name="app_name">ToDoList</string>
    <string name="welcome_message">Welcome to Didi\'s ToDo List</string>
    <string name="add_symbol">+</string>
    <string name="add_item">Add an item name</string>
    <string name="priority">Is it a priority?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="item_name_text">Item name</string>
    <string name="item_priority">Item priority</string>
    <string name="edit_item">Edit an item name</string>
    <string name="today_button_text">Today\'s items</string>
    <string name="past_button_text">Past items</string>


</resources>